--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@
         </div>
       </div>
     </div>
-    <script src="public/client.js"></script>
+    <script src="/client.js"></script>
   </body>
 </html>
