--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         </div>
       </div>
     </div>
+    <script src="/socket.io/socket.io.js"></script>
     <script src="/client.js"></script>
   </body>
 </html>
