Refactor chat area and add message sending functionality

--- a/index.html
+++ b/index.html
@@ -12,26 +12,10 @@
         <div class="logo">
           <h1>LOGO</h1>
         </div>
-        <div class="chat-area">
-          <div class="message incoming">
-            <div class="user-name">Ritesh</div>
-            <div class="user-message">
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam,
-              iste.
-            </div>
-          </div>
-          <div class="message outgoing">
-            <div class="user-name">Ritesh</div>
-            <div class="user-message">
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam,
-              iste.
-            </div>
-          </div>
-        </div>
+        <div class="chat-area"></div>
 
         <div class="input-area">
-          <input type="text" placeholder="Type a message..." />
-          <button>Send</button>
+          <input type="text" id="text" placeholder="Type a message..." />
         </div>
       </div>
     </div>
